syntax = "proto3";
package game.match;

option java_package = "com.zunf.tankbattletcpserver.grpc.game.match";
option java_outer_classname = "MatchClientProto";

message OpRequest {
  int64 playerId = 1;
  int64 matchId = 2;
  OpParams opParams = 3;
}

message OpParams {
  int32 tankDirection = 1;
}

// tick 数据 start
message Tick {
  int64 matchId = 1;
  int64 tickTimeStamp = 2;
  repeated Tank tanks = 3;
  repeated Bullet bullets = 4;
  repeated bytes mapData = 5;  // 使用 repeated bytes 来表示二维字节数组
  bool isGameOver = 6;
}

message Tank {
  int64 playerId = 1;
  double x = 2;
  double y = 3;
  int32 direction = 4;
  int32 life = 5;
}

message Bullet {
  int64 playerId = 1;
  int64 bulletId = 2;
  double x = 3;
  double y = 4;
  int32 direction = 5;
}

// tick 数据 end

message LeaveMatchReq {
  int64 playerId = 1;
  int64 matchId = 2;
}

